fix vertical spacing on error message

--- a/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
+++ b/src/components/form/fields/MaskedTextField/MaskedTextField.module.scss
@@ -16,7 +16,6 @@
 .hasPrefix {
     display: inline-block;
     position: relative;
-    margin-top: 0.53rem;
 
     div {
         position: absolute;
